<resources>
    <string name="app_name">Nyasa</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Intent extras -->
    <string name="auth_token">auth_token</string>
    <string name="password_reset_info">We\'ve emailed you instructions for setting your password. If an account exists
        with the email you entered.
        You should receive them shortly.If you don\'t receive an email, please make sure you\'ve entered the address you
        registered with,
        and check your spam folder.
    </string>
    <string name="password_reset_email_sent">Password reset email sent</string>
    <string name="return_to_launcher_fragment">Return</string>
    <string name="text_error">Error</string>
    <string name="text_success">Success</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="email_field">Email</string>
    <string name="field_password">Password</string>
    <string name="field_login">Login</string>
    <string name="field_username">Username</string>
    <string name="field_confirm_password">Confirm password</string>
    <string name="field_register">Register</string>
    <string name="network_error_response">Error</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="my_blogs">My Blogs</string>
    <string name="home">Home</string>
    <string name="create">Create</string>

    <string name="fragment_create_blog">Create</string>
    <string name="fragment_update_blog">Update</string>
    <string name="fragment_view_blog">View</string>
    <string name="fragment_account">Account</string>
    <string name="fragment_change_password">Change password</string>
    <string name="fragment_blog">Blog</string>
    <string name="save_changes">Save changes</string>
    <string name="fragment_update_account">Update account</string>
    <string name="arg_email">arg_email</string>
    <string name="arg_username">arg_username</string>
    <string name="enter_a_username">Enter a username</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="current_password">Current password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="new_password">New password</string>
    <string name="change_password">Change password</string>
    <string name="your_email">Your email</string>
    <string name="your_username">Your username</string>
    <string name="register">Register</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="update_password">Update password</string>
    <string name="filter_asc">ASC</string>
    <string name="filter_desc">DESC</string>
    <string name="filter_author">Author</string>
    <string name="filter_date">Date</string>
    <string name="asc_desc">Ascending or descending order</string>
    <string name="author_or_date">Filter by author or date</string>
    <string name="filter_options">Filter options</string>
    <string name="publish">Publish</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="text_yes">yes</string>
    <string name="are_you_sure_publish">Are you sure you want to publish this?</string>
    <string name="are_you_sure_delete">Are you sure you want to delete this? This can\'t be un-done.</string>
    <string name="text_info">Info</string>
    <string name="delete">Delete</string>
    <string name="nyasa_blog_logo">Nyasa blog logo</string>
    <string name="title_activity_base">BaseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="go_to_viewblogfragment">go to ViewBlogFragment</string>
    <string name="apply">Apply</string>
    <string name="forgot_password">Forgot password</string>
    <string name="first_and_surname">First and Surname</string>
    <string name="updated_on_july_23_2022">Updated on July 23, 2022</string>
    <string name="the_title_of_a_blog">The Title of a Blog</string>
    <string name="blog_image">Blog Image</string>
    <string name="write_a_blog_title">Write a blog title...</string>
    <string name="upload_image">Upload Image</string>
    <string name="select_photo">SELECT PHOTO</string>
    <string name="write_some_content">Write some content...</string>
    <string name="top_background">Top background</string>
    <string name="white_line">white line</string>
    <string name="woman_on_a_desk">woman on a desk</string>
    <string name="welcome_to_nyasablog">Welcome to NyasaBlog</string>
    <string name="login_woman">login woman</string>
    <string name="writing_woman">writing woman</string>
    <string name="create_account">Create Account</string>
    <string name="this_is_some_blog_content">This is some blog content</string>
    <string name="touch_to_change_image">Touch to change image</string>
    <string name="cancel">Cancel</string>
    <string name="no_more_results">No more results...</string>
    <string name="retry">Retry</string>
    <string name="error_loading">Something went wrong</string>
    <string name="nyasa_blog">Nyasa Blog</string>
    <string name="edit_icon">edit icon</string>

</resources>