<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#eff0fc"
        android:padding="16dp">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:textSize="22sp"
            android:textColor="#000"
            android:text="@string/filter_options"
            />

    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:id="@+id/filter_group"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="16sp"
                android:text="@string/author_or_date"
                />

        <RadioButton
            android:id="@+id/filter_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:minHeight="48dp"
            android:text="@string/filter_author"
            android:textColor="#000"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/filter_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:minHeight="48dp"
            android:text="@string/filter_date"
            android:textColor="#000"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

    </RadioGroup>


    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:id="@+id/order_group"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="16sp"
                android:text="@string/asc_desc"
                />


        <RadioButton
            android:id="@+id/filter_asc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:minHeight="48dp"
            android:text="@string/filter_asc"
            android:textColor="#000"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/filter_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:minHeight="48dp"
            android:text="@string/filter_desc"
            android:textColor="#000"
            android:textSize="16sp" />

    </RadioGroup>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginTop="30dp"
            >

        <TextView
            android:id="@+id/negative_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"

            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/positive_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply"
            android:textColor="@color/tealDark"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>



</LinearLayout>