<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.blog.ViewBlogFragment"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
    android:background="#eff0fc"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"

        >

        <TextView
            android:id="@+id/blog_title"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:fontFamily="@font/andika"
            android:text="@string/the_title_of_a_blog"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/blog_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/blog_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/container1"
            android:id="@+id/blog_image"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            tools:src="@mipmap/ic_launcher_round"
            android:contentDescription="@string/blog_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/blog_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:id="@+id/container1"
            >

            <TextView
                android:id="@+id/blog_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nyasa_blog"
                android:textColor="@color/grey5"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/blog_update_date"
                android:text="@string/updated_on_july_23_2022"
                android:textColor="@color/grey5"
                android:textSize="13sp"
                android:layout_marginTop="10dp"
                />



            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/grey4"
                android:layout_marginTop="10dp"
                >

            </View>


            <TextView
                android:id="@+id/blog_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autoLink="web|map|email"
                android:linksClickable="true"
                android:minHeight="48dp"
                android:text="@string/this_is_some_blog_content"
                android:textColor="#000"
                android:textSize="17sp"
                app:emojiCompatEnabled="true" />


            <Button
                android:id="@+id/delete_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/background_button2"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="16sp"
                android:visibility="invisible" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.core.widget.NestedScrollView>