<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardElevation="10dp"
    app:cardCornerRadius="2dp"
    android:background="#eff0fc"
    app:cardPreventCornerOverlap="false">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >


        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/blog_image"
                android:padding="0dp"
                android:layout_margin="0dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
            tools:src="@mipmap/ic_launcher_round"
            android:contentDescription="@string/blog_image" />


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/blog_image"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:id="@+id/container1"
                >

            <TextView
                android:id="@+id/blog_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/andika"
                android:text="@string/the_title_of_a_blog"
                android:textColor="#000"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/blog_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/first_and_surname"
                android:textColor="@color/grey5"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/blog_update_date"
                    android:text="@string/updated_on_july_23_2022"
                    android:textColor="@color/grey5"
                    android:textSize="13sp"
                    android:layout_marginTop="10dp"
                    />

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>