<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.blog.UpdateBlogFragment"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
    android:background="#eff0fc"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="2"
            android:maxLength="60"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/image_container"
            android:id="@+id/blog_title"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/the_title_of_a_blog"
            android:textColor="#000"
            android:textSize="19sp"
            android:textStyle="bold"
            android:autofillHints="Title"
             />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/blog_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/container1"
            android:id="@+id/image_container"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/blog_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/default_image"
                android:contentDescription="@string/upload_image" />

            <TextView
                android:id="@+id/update_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey3"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/touch_to_change_image"
                android:textColor="#fff"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/image_container"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:id="@+id/container1"
            >


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/grey4"
                android:layout_marginTop="10dp"/>



            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/blog_body"
                android:minLines="10"
                android:gravity="start"
                android:text="@string/this_is_some_blog_content"
                android:textColor="#000"
                android:textSize="17sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@android:color/transparent"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.core.widget.NestedScrollView>