<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.create_blog.CreateBlogFragment"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
    android:background="#eff0fc"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"

        >

        <EditText
            android:id="@+id/blog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Write blog title"
            android:gravity="center_vertical"
            android:hint="@string/write_a_blog_title"
            android:inputType="text"
            android:maxLength="60"
            android:minLines="2"
            android:textColor="#000"
            android:textColorHint="#757575"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/blog_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/blog_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/update_textview"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/blog_title"
            android:contentDescription="@string/upload_image" />


        <TextView
            android:id="@+id/update_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/main_button_drawable"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/select_photo"
            android:textColor="#fff"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/container1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/blog_image"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/update_textview"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:id="@+id/container1"
            >


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/grey4"
                android:layout_marginTop="10dp"/>


            <EditText
                android:id="@+id/blog_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:autofillHints="Write some content"
                android:background="@android:color/transparent"
                android:gravity="start"
                android:hint="@string/write_some_content"
                android:inputType="text"
                android:minHeight="48dp"
                android:minLines="10"
                android:textColor="#000"
                android:textColorHint="#546E7A"
                android:textSize="17sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/grey4"
                android:layout_marginTop="10dp"/>



        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.core.widget.NestedScrollView>